vlib/v/checker/tests/init_literal.vv
i := 3
_ = []int{len: 3.3}
_ = []int{cap: &i}
_ = chan int{cap: [i]}
